# openpix

./: .gitignore  AGENTS.md  CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
docs/plans/: 2026-03-08-openpix-screenshot-tool-design.md  2026-03-08-openpix-screenshot-tool.md  2026-03-09-long-image-viewer-design.md  2026-03-09-long-image-viewer.md  2026-03-10-flexible-scroll-stitching-design.md  2026-03-10-flexible-scroll-stitching.md  2026-03-11-pin-feature-design.md  2026-03-11-pin-feature.md  2026-03-13-codebase-refactor-design.md  2026-03-13-codebase-refactor.md  2026-03-13-toolbar-hotkeys-design.md  2026-03-13-toolbar-hotkeys.md
onnxruntime/core/session/: onnxruntime_c_api.h  onnxruntime_cxx_api.h
src/: AnnotationManager.cpp  AnnotationManager.h  CaptureManager.cpp  CaptureManager.h  LongImageWidget.cpp  LongImageWidget.h  OcrEngine.cpp  OcrEngine.h  OverlayWidget.cpp  OverlayWidget.h  PinnedImageWidget.cpp  PinnedImageWidget.h  ScrollCapture.cpp  ScrollCapture.h  Stitcher.cpp  Stitcher.h  Toolbar.cpp  Toolbar.h  main.cpp
tests/: test_stitcher.cpp
